--- a/todo-app.html
+++ b/todo-app.html
@@ -7,6 +7,8 @@
     <title>Todo App</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <!-- Include Bootstrap CSS -->
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- Include JQuery -->	
 </head>
 <body>
     <div class="container mt-5">
