--- a/todo-app.html
+++ b/todo-app.html
@@ -14,19 +14,24 @@
     <div class="container mt-5">
         <div class="row">
             <div class="col-md-12">
-                <h1>Todo App</h1>
-                <table id="dataTable" class="table table-striped table-hover">
-                    <thead>
-                        <tr>
-                            <th class="header">ID</th>
-                            <th class="header">Title</th>
-                            <th class="header">Completed</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <!-- Table rows will be dynamically added here -->
-                    </tbody>
-                </table>
+				<h1>Todo App</h1>
+				<div class="col-md-3">
+                  <input type="text" class="form-control" placeholder="Search in table..." id="searchField">
+                </div>
+				<div id="table-sortable"> <!-- added for table sorting, search and pagination -->
+					<table id="dataTable" class="table table-striped table-hover">
+						<thead>
+							<tr>
+								<th class="header">ID</th>
+								<th class="header">Title</th>
+								<th class="header">Completed</th>
+							</tr>
+						</thead>
+						<tbody>
+							<!-- Table rows will be dynamically added here -->
+						</tbody>
+					</table>
+				</div><!-- added for table sorting, search and pagination -->
             </div>
         </div>
     </div>
@@ -34,12 +39,39 @@
     <!-- Include jQuery and Bootstrap JS -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
     <!-- Include any other third-party JS -->
-
+    <script src="https://table-sortable.now.sh/table-sortable.js"></script>
     <script>
         $(document).ready(function(){
             // Function to fetch data and populate the table
             // This can be in a separate file or embedded here
-			getToDoJson();
+			
+			/** column headers */
+			var columns = {
+				id: 'ID',
+				title: 'Title',
+				completed: 'Completed'
+			};
+			/** columns setting for sorting */
+			var table = $('#table-sortable').tableSortable({
+				data: [],
+				columns: columns,
+				rowsPerPage: 10,
+				pagination: true,
+				searchField: '#searchField',
+				sortingIcons: {
+					asc: '<span>▼</span>',
+					desc: '<span>▲</span>',
+				},
+			});
+
+			$.get(' https://jsonplaceholder.typicode.com/todos', function(data) {
+			    console.log(data)
+				// Push data into existing data
+				table.setData(data, null, true);
+
+				// or Set new data on table, columns is optional.
+				table.setData(data, columns);
+			})
 		});	
     </script>
 	<script>
@@ -48,19 +80,21 @@
      url: ' https://jsonplaceholder.typicode.com/todos',
      method: 'GET',
 		success: function(response) {
-        // Handle the API response here
-         console.log(response);
-		var trHTML = '';
+		console.log(response);
+        // Superseeded by JQuery table sort/search/pagination mods above
+		// Handle the API response here
+        
+		//var trHTML = '';
 
-        $.each(response, function (i, item)
-        {   
-            trHTML += 
-            '<tr><td>' + item.id + 
-            '</td><td>' + item.title + 
-            '</td><td>' + item.completed + 
-            '</td></tr>';            
-        });
-		  $('#dataTable').append(trHTML);
+        //$.each(response, function (i, item)
+        //{   
+        //    trHTML += 
+        //    '<tr><td>' + item.id + 
+        //    '</td><td>' + item.title + 
+        //    '</td><td>' + item.completed + 
+        //    '</td></tr>';            
+        //});
+		//  $('#dataTable').append(trHTML);
 		},
 		error: function(xhr, status, error) {
         // Handle errors here
