--- a/todo-app.html
+++ b/todo-app.html
@@ -15,10 +15,24 @@
         <div class="row">
             <div class="col-md-12">
 				<h1>Todo App</h1>
-				<div class="col-md-3">
-                  <input type="text" class="form-control" placeholder="Search in table..." id="searchField">
-                </div>
-				<div id="table-sortable"> <!-- added for table sorting, search and pagination -->
+				<!-- sorting and search feilds START -->
+				<div class="row mt-5 mb-3 align-items-center">
+					<div class="col-md-3">
+					  <input type="text" class="form-control" placeholder="Search in table..." id="searchField">
+					</div>
+					<div class="col-md-3 text-right">
+					  <span class="pr-3">Rows Per Page:</span>
+					  &nbsp;
+					  <select class="custom-select" name="rowsPerPage" id="changeRows">
+								<option value="10" selected>10</option>
+								<option value="20">20</option>
+								<option value="50">50</option>
+								<option value="100">100</option>
+							</select>
+					</div>
+				</div>
+				<!-- sorting and search feilds END -->
+				<div id="table-sortable">
 					<table id="dataTable" class="table table-striped table-hover">
 						<thead>
 							<tr>
@@ -31,7 +45,7 @@
 							<!-- Table rows will be dynamically added here -->
 						</tbody>
 					</table>
-				</div><!-- added for table sorting, search and pagination -->
+				</div>
             </div>
         </div>
     </div>
@@ -51,7 +65,13 @@
 				title: 'Title',
 				completed: 'Completed'
 			};
-			/** columns setting for sorting */
+				
+			/** change number of rows */
+			$('#changeRows').on('change', function() {
+				table.updateRowsPerPage(parseInt($(this).val(), 10));
+			})
+			
+			/** columns setting for sorting and pagination*/
 			var table = $('#table-sortable').tableSortable({
 				data: [],
 				columns: columns,
@@ -63,7 +83,9 @@
 					desc: '<span>▲</span>',
 				},
 			});
-
+			console.log(table.options);
+			
+			/** fetch data and populate table */
 			$.get(' https://jsonplaceholder.typicode.com/todos', function(data) {
 			    console.log(data)
 				// Push data into existing data
@@ -74,35 +96,6 @@
 			})
 		});	
     </script>
-	<script>
-	function getToDoJson(){
-	 $.ajax({
-     url: ' https://jsonplaceholder.typicode.com/todos',
-     method: 'GET',
-		success: function(response) {
-		console.log(response);
-        // Superseeded by JQuery table sort/search/pagination mods above
-		// Handle the API response here
-        
-		//var trHTML = '';
-
-        //$.each(response, function (i, item)
-        //{   
-        //    trHTML += 
-        //    '<tr><td>' + item.id + 
-        //    '</td><td>' + item.title + 
-        //    '</td><td>' + item.completed + 
-        //    '</td></tr>';            
-        //});
-		//  $('#dataTable').append(trHTML);
-		},
-		error: function(xhr, status, error) {
-        // Handle errors here
-         console.error(status, error);
-		}
-		});
-	};
-	</script>
 <div class="container mt-3"><a href="https://github.com/davidbradley305/CMO-todo-app/tree/main">Git Hub Repo</a></div>
 </body>
 </html>
